--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Minimalistic Portfolio</title>
 </head>
 <body>
-    <!-- ewebhjgwejghk -->
-    <h1>Takrorlash</h1>
+
     <!-- HEADER START -->
+    <h2>rgreugkhweilgjeklgjewlki</h2>
 
     <div class="site-header">
         <div class="container">
